--- a/frontend/BlogSite/package.json
+++ b/frontend/BlogSite/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
