--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "sharp": "^0.33.2",
     "validator": "^13.11.0"
   },
   "keywords": [],
